--- a/views/shop/product-detail.ejs
+++ b/views/shop/product-detail.ejs
@@ -6,14 +6,12 @@
         <main class="centered">
             <h1><%= product.title %></h1>
             <hr>
-            <div>
+            <div class="img">
                 <img src="<%= product.imageUrl %>" alt="<%= product.title %>">
-            </div>
-            <h2><%= product.price %></h2>
+                <h2><%= product.price %></h2>
             <p><%= product.description %></p>
-            <form action="/cart" method="post">
-                <button class="btn" type="submit">Add to Cart</button>
-                <input type="hidden" name="productId" value="<%= product.id%>">
-            </form>
+            <%- include('../includes/add-to-cart.ejs', {product}) %>
+            </div>
+            
         </main>
         <%- include('../includes/end.ejs') %>
