--- a/public/css/main.css
+++ b/public/css/main.css
@@ -21,8 +21,16 @@ form {
 
 .centered {
   text-align: center;
+  width: 80%;
 }
-
+div.img {
+  margin: 0 auto;
+  width: 400px;
+  height: 500px;
+}
+div.img img {
+  width: 80%;
+}
 .main-header {
   width: 100%;
   height: 3.5rem;
