--- a/views/shop/Product-list.ejs
+++ b/views/shop/Product-list.ejs
@@ -29,9 +29,7 @@
                                 <div class="card__actions">
 
                                     <a href="/products/<%= product.id %>" class="btn">Details</a>
-                                    <form action="/add-to-cart" method="POST">
-                                        <button class="btn">Add to Cart</button>
-                                    </form>
+                                    <%- include('../includes/add-to-cart.ejs', {product}) %>
                                 </div>
                             </article>
                             <% } %>
