--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -7,7 +7,7 @@
    <%- include('../includes/navigation.ejs') %>
 
     <main>
-        <form class="login-form" action="/login" method="POST">
+        <form class="login-form" action="/signup" method="POST">
             <div class="form-control">
                 <label for="name">Name</label>
                 <input type="name" name="name" id="name">
