--- a/public/css/main.css
+++ b/public/css/main.css
@@ -22,7 +22,12 @@ form {
 .centered {
   text-align: center;
 }
-
+.img {
+  height: 10rem;
+}
+.img img {
+  height: 100%;
+}
 .main-header {
   width: 100%;
   height: 3.5rem;
