clear and create cart { css and module }

--- a/views/shop/product-detail.ejs
+++ b/views/shop/product-detail.ejs
@@ -6,12 +6,11 @@
         <main class="centered">
             <h1><%= product.title %></h1>
             <hr>
-            <div class="img">
+            <div class="image">
                 <img src="<%= product.imageUrl %>" alt="<%= product.title %>">
-                <h2><%= product.price %></h2>
-            <p><%= product.description %></p>
-            <%- include('../includes/add-to-cart.ejs', {product}) %>
             </div>
-            
+            <h2><%= product.price %></h2>
+            <p><%= product.description %></p>
+            <%- include('../includes/add-to-cart.ejs') %>
         </main>
         <%- include('../includes/end.ejs') %>
