--- a/public/css/main.css
+++ b/public/css/main.css
@@ -22,12 +22,15 @@ form {
 .centered {
   text-align: center;
 }
-.img {
-  height: 10rem;
+
+.image {
+  height: 20rem;
 }
-.img img {
+
+.image img {
   height: 100%;
 }
+
 .main-header {
   width: 100%;
   height: 3.5rem;
@@ -199,6 +202,17 @@ form {
 .btn:hover,
 .btn:active {
   background-color: #00695c;
+  color: white;
+}
+
+.btn.danger {
+  color: red;
+  border-color: red;
+}
+
+.btn.danger:hover,
+.btn.danger:active {
+  background: red;
   color: white;
 }
 
