--- a/views/shop/Product-list.ejs
+++ b/views/shop/Product-list.ejs
@@ -27,9 +27,8 @@
                                     </p>
                                 </div>
                                 <div class="card__actions">
-
                                     <a href="/products/<%= product.id %>" class="btn">Details</a>
-                                    <%- include('../includes/add-to-cart.ejs', {product}) %>
+                                    <%- include('../includes/add-to-cart.ejs', {product: product}) %>
                                 </div>
                             </article>
                             <% } %>
