--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -22,7 +22,8 @@
                             <p class="product__description"><%= product.description %></p>
                         </div>
                         <div class="card__actions">
-                            <%- include('../includes/add-to-cart.ejs', {product}) %>
+                                <a href="/products/<%= product.id %>" class="btn">Details</a>
+                            <%- include('../includes/add-to-cart.ejs', {product: product}) %>
                         </div>
                     </article>
                 <% } %>
