--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -11,6 +11,7 @@
 					>Products</a
 				>
 			</li>
+			<% if (isAuthenticated) { %>
 			<li class="main-header__item">
 				<a class="<%= path === '/cart' ? 'active' : '' %>" href="/cart">Cart</a>
 			</li>
@@ -19,7 +20,6 @@
 					>Orders</a
 				>
 			</li>
-			<% if (isAuthenticated) { %>
 			<li class="main-header__item">
 				<a
 					class="<%= path === '/admin/add-product' ? 'active' : '' %>"
@@ -37,11 +37,19 @@
 			<% } %>
 		</ul>
 		<ul class="main-header__item-list">
+			<% if (!isAuthenticated) { %>
 			<li class="main-header__item">
 				<a class="<%= path === '/login' ? 'active' : '' %>" href="/login"
 					>Login</a
 				>
 			</li>
+			<% } else { %>
+			<li class="main-header__item">
+				<form action="/logout" method="post">
+					<button type="submit">Logout</button>
+				</form>
+			</li>
+			<% } %>
 		</ul>
 	</nav>
 </header>
@@ -56,6 +64,7 @@
 				>Products</a
 			>
 		</li>
+		<% if (isAuthenticated) { %>
 		<li class="mobile-nav__item">
 			<a class="<%= path === '/cart' ? 'active' : '' %>" href="/cart">Cart</a>
 		</li>
@@ -77,6 +86,31 @@
 				href="/admin/products"
 				>Admin Products
 			</a>
+		</li>
+		<li class="main-header__item">
+			<a
+				class="<%= path === '/admin/add-product' ? 'active' : '' %>"
+				href="/admin/add-product"
+				>Add Product
+			</a>
+		</li>
+		<li class="main-header__item">
+			<a
+				class="<%= path === '/admin/products' ? 'active' : '' %>"
+				href="/admin/products"
+				>Admin Products
+			</a>
+		</li>
+		<% } %>
+		<li class="mobile-nav__item">
+			<a class="<%= path === '/login' ? 'active' : '' %>" href="/login"
+				>Login</a
+			>
+		</li>
+		<li class="mobile-nav__item">
+			<form action="/logout" method="post">
+				<button type="submit">Logout</button>
+			</form>
 		</li>
 	</ul>
 </nav>
