--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -43,6 +43,11 @@
 					>Login</a
 				>
 			</li>
+			<li class="main-header__item">
+				<a class="<%= path === '/signup' ? 'active' : '' %>" href="/signup"
+					>Signup</a
+				>
+			</li>
 			<% } else { %>
 			<li class="main-header__item">
 				<form action="/logout" method="post">
@@ -87,30 +92,23 @@
 				>Admin Products
 			</a>
 		</li>
-		<li class="main-header__item">
-			<a
-				class="<%= path === '/admin/add-product' ? 'active' : '' %>"
-				href="/admin/add-product"
-				>Add Product
-			</a>
-		</li>
-		<li class="main-header__item">
-			<a
-				class="<%= path === '/admin/products' ? 'active' : '' %>"
-				href="/admin/products"
-				>Admin Products
-			</a>
-		</li>
-		<% } %>
+		<% } %> <% if (!isAuthenticated) { %>
 		<li class="mobile-nav__item">
 			<a class="<%= path === '/login' ? 'active' : '' %>" href="/login"
 				>Login</a
 			>
 		</li>
 		<li class="mobile-nav__item">
+			<a class="<%= path === '/signup' ? 'active' : '' %>" href="/signup"
+				>Signup</a
+			>
+		</li>
+		<% } else { %>
+		<li class="mobile-nav__item">
 			<form action="/logout" method="post">
 				<button type="submit">Logout</button>
 			</form>
 		</li>
+		<% } %>
 	</ul>
 </nav>
