--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -9,22 +9,22 @@
     <main>
         <form class="login-form" action="/signup" method="POST">
             <div class="form-control">
-                <label for="name">Name</label>
+                <label for="name">Name *</label>
                 <input type="name" name="name" id="name">
             </div>
             <div class="form-control">
-                <label for="email">E-Mail</label>
+                <label for="email">E-Mail *</label>
                 <input type="email" name="email" id="email">
             </div>
             <div class="form-control">
-                <label for="password">Password</label>
+                <label for="password">Password *</label>
                 <input type="password" name="password" id="password">
             </div>
             <div class="form-control">
-                <label for="confirmPassword">Confirm Password</label>
+                <label for="confirmPassword">Confirm Password *</label>
                 <input type="password" name="confirmPassword" id="confirmPassword">
             </div>
-            <button class="btn" type="submit">Login</button>
+            <button class="btn" type="submit">Signup</button>
         </form>
     </main>
 <%- include('../includes/end.ejs') %>
