--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -5,8 +5,11 @@
 
 <body>
    <%- include('../includes/navigation.ejs') %>
-
+    
     <main>
+        <% if(error) { %>
+            <div class="user-message user-message--error"><%= errorMessage %></div>
+        <% } %>
         <form class="login-form" action="/login" method="POST">
             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
             <div class="form-control">
