--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -8,7 +8,7 @@
     
     <main>
         <% if(error) { %>
-            <div class="user-message user-message--error"><%= errorMessage %></div>
+            <div class="user-message user-message--error"><%= error %></div>
         <% } %>
         <form class="login-form" action="/login" method="POST">
             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
